--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^9.5.14",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
@@ -25,7 +27,10 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "react-icons": "^5.2.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
