--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.396.0",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "postcss-import": "^16.1.0",
     "postcss-preset-env": "^9.5.14",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
