--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.396.0",
-    "next": "14.2.4",
+    "next": "^14.2.7",
     "postcss-import": "^16.1.0",
     "postcss-preset-env": "^9.5.14",
     "react": "^18",
