--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "recharts": "^2.12.7",
+    "recharts": "^2.13.0-alpha.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
